--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ Thumbs.db
 htmlcov/
 
 # Output files - exclude from git
-03 6학년 배정 결과.xlsx
+03 *배정 결과.xlsx
 안간에게 보낼 분반 자료.zip
 **/~$*.xlsx
 test_output.xlsx
